New soft shadows don't support viewport render [no TAA] #71154

Closed
opened 2019-10-28 08:50:21 +01:00 by Leroy · 22 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-10-27 13:40, hash: 9b6aa740be
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

Not sure it's bug, or functional defects.

Exact steps for others to reproduce the error

Download my file, than click View/ Viewport render image.

screenshots:
vrs.png

.blend file:
viewport_render_soft_shadows.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-10-27 13:40, hash: `9b6aa740be` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] Not sure it's bug, or functional defects. **Exact steps for others to reproduce the error** Download my file, than click View/ Viewport render image. screenshots: ![vrs.png](https://archive.blender.org/developer/F7864665/vrs.png) .blend file: [viewport_render_soft_shadows.blend](https://archive.blender.org/developer/F7864668/viewport_render_soft_shadows.blend)
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

#69985 was marked as duplicate of this issue

#69985 was marked as duplicate of this issue

studio/blender-studio#70301 was marked as duplicate of this issue

studio/blender-studio#70301 was marked as duplicate of this issue

Added subscriber: @RodDavis

Added subscriber: @RodDavis

Added subscriber: @RL

Added subscriber: @RL

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-10-30 14:04:58 +01:00

@fclem, is this a known limitation?

(Edited: I confused viewport render with view render F11)

@fclem, is this a known limitation? (Edited: I confused viewport render with view render F11)
Member

Added subscriber: @icappiello

Added subscriber: @icappiello
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Hm, pretty sure this is more or less working as intended.

Temporal AA [Viewport Samples] only kicks in for doing "real" eevee engine rendering (eevee_draw_background).
Since the bpy.ops.render.opengl does "only" ED_view3d_draw_offscreen, there is only one sample in effect so to say.

Not sure what the future plans for bpy.ops.render.opengl are @Jeroen-Bakker, @fclem, is this to be kept alongside the "real" rendering engines?

Hm, pretty sure this is more or less working as intended. Temporal AA [`Viewport Samples`] only kicks in for doing "real" eevee engine rendering (`eevee_draw_background`). Since the `bpy.ops.render.opengl` does "only" `ED_view3d_draw_offscreen`, there is only one sample in effect so to say. Not sure what the future plans for `bpy.ops.render.opengl` are @Jeroen-Bakker, @fclem, is this to be kept alongside the "real" rendering engines?
Philipp Oeser changed title from New soft shadows don't support viewport render to New soft shadows don't support viewport render [no TAA] 2020-01-02 10:19:47 +01:00

Added subscriber: @M_Rodionov

Added subscriber: @M_Rodionov

Viewport rendering should do a "real" eevee rendering but without re-exporting scene every frame like it does now. This could be a game changer like it was in 2.80 alpha. With this "real" viewport rendering eevee renderspeed is comparable to twinmotion renderspeed and to lumion renderspeed. So viewport rendering needs AA back...

Viewport rendering should do a "real" eevee rendering but without re-exporting scene every frame like it does now. This could be a game changer like it was in 2.80 alpha. With this "real" viewport rendering eevee renderspeed is comparable to twinmotion renderspeed and to lumion renderspeed. So viewport rendering needs AA back...
Member

Yes, if this is the case, than it is an actual issue. Can check tomorrow what is going on.

Yes, if this is the case, than it is an actual issue. Can check tomorrow what is going on.
Clément Foucault was unassigned by Jeroen Bakker 2020-01-07 08:50:53 +01:00
Jeroen Bakker self-assigned this 2020-01-07 08:50:53 +01:00
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

It seems that multiple samples are calculated (you can see this by adding a volume object to the scene) the volume object is rendered with multiple samples.
Will check if the soft shadow light location and buffers are recalculated.

image.png

It seems that multiple samples are calculated (you can see this by adding a volume object to the scene) the volume object is rendered with multiple samples. Will check if the soft shadow light location and buffers are recalculated. ![image.png](https://archive.blender.org/developer/F8264102/image.png)

This issue was referenced by 7c9d15fca8

This issue was referenced by 7c9d15fca8767ef3b5aaee11acf8ab3ad4969617

"Sun" softshadows are "soft", only other lights are sharp - point, area, spot
Clipboard01.jpg

"Sun" softshadows are "soft", only other lights are sharp - point, area, spot ![Clipboard01.jpg](https://archive.blender.org/developer/F8264246/Clipboard01.jpg)
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy

Added subscribers: @JulienKaspar, @IsiacDaGraca

Added subscribers: @JulienKaspar, @IsiacDaGraca
Added subscribers: @emilian, @StephenHamacek, @FaunsForest, @filibis
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71154
No description provided.